--- a/css/acerca_de.css
+++ b/css/acerca_de.css
@@ -9,33 +9,36 @@ header {
     color: #fff;
     padding: 20px;
     text-align: center;
-    padding-bottom: 0px;
-    font-family: Arial, sans-serif !important;
-    font-size: 16px !important;
+    font-family: Arial, sans-serif;
 }
 
-header > h1{
+header > h1 {
     color: #f44236;
     font-size: 40px;
-    border: #fff;
+    margin-bottom: 10px;
 }
 
-header a{
+header a {
     text-decoration: none;
     color: inherit;
-    font-size: 18px !important;
+    font-size: 18px;
+}
+
+header nav {
+    display: flex;
+    justify-content: center;
+    padding-top: 1%;
 }
 
 header nav ul {
+    list-style: none;
     margin: 0;
-    padding: 0;
-    list-style-type: none;
-    padding: 0;
+    display: flex;
 }
 
 header nav ul li {
-    display: inline;
     margin-right: 20px;
+    margin-left: 20px;
 }
 
 .btn {
@@ -62,7 +65,7 @@ header nav ul li {
 
 .secondary-nav ul {
     list-style-type: none;
-    padding: 1%;
+    margin-bottom: -7px;
 }
 
 .secondary-nav ul li {
@@ -98,10 +101,12 @@ header nav ul li {
     padding-top: 20px;
 }
 
+
 .bodyUs{
     background-image: url('../utils/acercaDe.png');
     background-size: cover;
     background-position: center;
+    width: 100%;
     
 }
 
