--- a/css/producto.css
+++ b/css/producto.css
@@ -9,48 +9,36 @@ header {
     color: #fff;
     padding: 20px;
     text-align: center;
-    padding-bottom: 0px;
-    font-family: Arial, sans-serif !important;
-    font-size: 16px !important;
+    font-family: Arial, sans-serif;
 }
 
 header > h1 {
     color: #f44236;
     font-size: 40px;
-    border: #fff;
+    margin-bottom: 10px;
 }
 
 header a {
     text-decoration: none;
     color: inherit;
-    font-size: 18px !important;
+    font-size: 18px;
+}
+
+header nav {
+    display: flex;
+    justify-content: center;
+    padding-top: 1%;
 }
 
 header nav ul {
+    list-style: none;
     margin: 0;
-    padding: 0;
-    list-style-type: none;
-    padding: 0;
+    display: flex;
 }
 
 header nav ul li {
-    display: inline;
     margin-right: 20px;
-}
-
-.btn {
-    display: inline-block;
-    background-color: #f44236;
-    color: #fff;
-    text-decoration: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-    font-family: Arial, sans-serif;
-}
-
-.btn:hover {
-    background-color: #CC241D;
+    margin-left: 20px;
 }
 
 .secondary-nav {
@@ -62,7 +50,7 @@ header nav ul li {
 
 .secondary-nav ul {
     list-style-type: none;
-    padding: 1%;
+    margin-bottom: -7px;
 }
 
 .secondary-nav ul li {
@@ -264,6 +252,22 @@ header nav ul li {
     font-family: 'Arial', sans-serif !important;
 }
 
+
+.btn {
+    display: inline-block;
+    background-color: #f44236;
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    font-family: Arial, sans-serif;
+}
+
+.btn:hover {
+    background-color: #CC241D;
+}
+
 /* Estilos del pie de página */
 footer {
     background-color: #333;
@@ -276,6 +280,32 @@ footer {
 
 /* Media Queries para pantallas pequeñas */
 @media screen and (max-width: 768px) {
+
+    header {
+        padding: 10px;
+    }
+
+    header > h1 {
+        font-size: 30px;
+    }
+
+    header nav {
+        flex-direction: column;
+    }
+
+    header .primary-nav{
+        padding-right: 10%
+    }
+
+    header .secondary-nav{
+        padding-right: 5%
+    }
+
+
+    header nav ul li {
+        margin: 10px 0;
+        flex: 1;
+    }
 
     .product {
         flex-direction: column;
@@ -306,31 +336,9 @@ footer {
 
     .rating {
         justify-self: center; /* Centrar horizontalmente */
+        margin-bottom: 2%;
     }
-}
-
-@media (max-width: 480px) {
-    header h1 {
-        font-size: 30px;
-    }
-
-    .product-title {
-        font-size: 20px;
-    }
-
-    .product-description{
-        text-align: center;
-    }
-
-    .product-description > p {
-        font-size: 14px;
-    }
-
-    .price strong {
-        font-size: 24px;
-    }
-
-    .product img {
-        max-width: 50%;
+    .product-btn{
+        margin-top: 5%;
     }
 }
