--- a/css/producto.css
+++ b/css/producto.css
@@ -298,7 +298,16 @@ footer {
     }
 
     header .secondary-nav{
-        padding-right: 5%
+        padding-right: 5%;
+        border-top: 5px solid #fff; /* Borde superior blanco */
+        margin-top: 0px; /* Margen superior para separación */        
+    }
+
+    .secondary-nav ul li a {
+        color: #fff;
+        text-decoration: none;
+        font-size: 16px;
+        padding: 0px 0px;
     }
 
 
