--- a/css/productos.css
+++ b/css/productos.css
@@ -42,25 +42,6 @@ header nav ul li {
     margin-left: 20px;
 }
 
-/* Estilos del héroe */
-.hero {
-    background-image: url('hero-bg.jpg');
-    background-size: cover;
-    color: #fff;
-    text-align: center;
-    padding: 100px 0;
-}
-
-.hero h2 {
-    font-size: 36px;
-    margin-bottom: 20px;
-}
-
-.hero p {
-    font-size: 18px;
-    margin-bottom: 30px;
-}
-
 .btn {
     display: inline-block;
     background-color: #f44236;
@@ -75,7 +56,6 @@ header nav ul li {
 .btn:hover {
     background-color: #CC241D;
 }
-
 
 .secondary-nav {
     background-color: #333;
@@ -189,4 +169,44 @@ footer {
     padding: 20px 0;
     position: relative; /* Posicionamiento relativo */
     margin-top: auto; /* Margen superior automático */
+}
+
+
+/* Media Queries para pantallas pequeñas */
+@media screen and (max-width: 768px) {
+
+    header {
+        padding: 10px;
+    }
+
+    header > h1 {
+        font-size: 30px;
+    }
+
+    header nav {
+        flex-direction: column;
+    }
+
+    header .primary-nav{
+        padding-right: 10%
+    }
+
+    header .secondary-nav{
+        padding-right: 5%;
+        border-top: 5px solid #fff; /* Borde superior blanco */
+        margin-top: 0px; /* Margen superior para separación */        
+    }
+
+    .secondary-nav ul li a {
+        color: #fff;
+        text-decoration: none;
+        font-size: 16px;
+        padding: 0px 0px;
+    }
+
+
+    header nav ul li {
+        margin: 10px 0;
+        flex: 1;
+    }
 }
