--- a/css/acerca_de.css
+++ b/css/acerca_de.css
@@ -101,17 +101,97 @@ header nav ul li {
     padding-top: 20px;
 }
 
-
-.bodyUs{
+.bodyUS {
+    position: relative;
+    height: 400px; /* Ajusta la altura según tus necesidades */
+    overflow: hidden;
     background-image: url('../utils/acercaDe.png');
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
+.overlay {
+    position: absolute;
+    content: '';
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50%; /* Controla cuánto de la imagen se cubre */
+    background-color: rgba(0, 0, 0, 0.5); /* Ajusta el color y la opacidad del overlay */
+}
 .contenedor {
-    border: 2px solid #f44236;
-    font-size: 40px;
-    padding: 20px;
-  }
+    position: relative;
+    z-index: 1; /* Asegura que el contenedor esté por encima del overlay */
+    background-color: white; /* Color de fondo del contenedor */
+    border: 2px solid red; /* Borde rojo */
+    border-radius: 10px; /* Bordes redondeados */
+    padding: 20px; /* Espacio interno para el contenido */
+    display: flex;
+    flex-direction: column; /* Columna principal para dividir en filas */
+    margin-top: 25%;
+}
+
+.fila {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 20px; /* Espacio entre las filas */
+}
+
+.info, .foto {
+    width: calc(50% - 10px); /* Dividir el espacio en dos con un margen de 10px */
+}
+
+.imagen {
+    width: 100%; /* Ajusta el ancho de las imágenes */
+}
+
+/* Estilos del pie de página */
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+    position: relative; /* Posicionamiento relativo */
+    margin-top: 30%; /* Margen superior automático */
+}
+
+  
+/* Media Queries para pantallas pequeñas */
+@media screen and (max-width: 768px) {
+
+    header {
+        padding: 10px;
+    }
+
+    header > h1 {
+        font-size: 30px;
+    }
+
+    header nav {
+        flex-direction: column;
+    }
+
+    header .primary-nav{
+        padding-right: 10%
+    }
+
+    header .secondary-nav{
+        padding-right: 5%;
+        border-top: 5px solid #fff; /* Borde superior blanco */
+        margin-top: 0px; /* Margen superior para separación */        
+    }
+
+    .secondary-nav ul li a {
+        color: #fff;
+        text-decoration: none;
+        font-size: 16px;
+        padding: 0px 0px;
+    }
+
+
+    header nav ul li {
+        margin: 10px 0;
+        flex: 1;
+    }
+}
