--- a/css/acerca_de.css
+++ b/css/acerca_de.css
@@ -103,47 +103,91 @@ header nav ul li {
 
 .bodyUS {
     position: relative;
-    height: 400px; /* Ajusta la altura según tus necesidades */
-    overflow: hidden;
-    background-image: url('../utils/acercaDe.png');
-    padding-left: 10%;
-    padding-right: 10%;
+    padding: 40px 0; /* Ajusta el padding según sea necesario */
+}
+
+.background-img {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-size: cover;
+    background-position: center;
+    opacity: 1;
 }
 
 .overlay {
     position: absolute;
-    content: '';
-    bottom: 0;
+    top: 0;
     left: 0;
     width: 100%;
-    height: 50%; /* Controla cuánto de la imagen se cubre */
-    background-color: rgba(0, 0, 0, 0.5); /* Ajusta el color y la opacidad del overlay */
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Color de fondo semi-transparente */
 }
+
 .contenedor {
     position: relative;
-    z-index: 1; /* Asegura que el contenedor esté por encima del overlay */
-    background-color: white; /* Color de fondo del contenedor */
-    border: 2px solid red; /* Borde rojo */
-    border-radius: 10px; /* Bordes redondeados */
-    padding: 20px; /* Espacio interno para el contenido */
+    z-index: 1;
+    background-color: white;
+    border: 2px solid red; /* Borde rojo de 1 píxel */
+    border-radius: 10px; /* Bordes redondeados de 10px */
+    margin-top: -550px;
+    margin-left: 5%;
+    margin-right: 5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Sombra de color negro con 10px de desenfoque */
+}
+
+.contenido {
     display: flex;
-    flex-direction: column; /* Columna principal para dividir en filas */
-    margin-top: 25%;
+    flex-direction: column;
+    align-items: center;
+    z-index: 1;
 }
 
 .fila {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 20px; /* Espacio entre las filas */
+    align-items: center;
+    width: 80%; /* Ajusta el ancho según sea necesario */
+    margin-bottom: 20px; /* Espacio entre filas */
+    margin-top: 20px;
 }
 
-.info, .foto {
-    width: calc(50% - 10px); /* Dividir el espacio en dos con un margen de 10px */
+.info{
+    flex-grow: 1; /* Hace que el párrafo ocupe todo el espacio disponible */
+}
+.info,
+.foto {
+    width: 35%; /* Ajusta el ancho según sea necesario */
+    
+}
+
+.info h2{
+    color: black;
+    border-bottom: 2px solid #f44236;
+    padding-bottom: 10px;
+}
+.info p{
+    color: #333;
+    
 }
 
 .imagen {
-    width: 100%; /* Ajusta el ancho de las imágenes */
+    width: 90%;
+    height: auto;
+    margin-left: 15%;
+}
+
+.imagen2{
+    width: 55%;
+    object-fit: cover;
+    height: auto;
+}
+
+h2,
+p {
+    color: #fff; /* Color del texto */
+    text-align: center;
 }
 
 /* Estilos del pie de página */
@@ -153,7 +197,7 @@ footer {
     text-align: center;
     padding: 20px 0;
     position: relative; /* Posicionamiento relativo */
-    margin-top: 30%; /* Margen superior automático */
+    margin-top: 10%;
 }
 
   
