--- a/css/inicio.css
+++ b/css/inicio.css
@@ -24,6 +24,12 @@ header {
     text-align: center !important;
 }
 
+header a {
+    text-decoration: none;
+    color: inherit;
+    font-size: 18px;
+}
+
 
 h1 {
     margin-block-start: 0.67em !important;
@@ -34,7 +40,8 @@ h1 {
     unicode-bidi: isolate !important;
     font-size: 40px !important;
     color: #f44236 !important;
-    }
+}
+
 
 header nav ul {
     margin: 0 !important;
