--- a/css/producto.css
+++ b/css/producto.css
@@ -285,6 +285,10 @@ footer {
         padding: 10px;
     }
 
+    header a{
+        font-size: 14px;
+    }
+
     header > h1 {
         font-size: 30px;
     }
@@ -308,12 +312,22 @@ footer {
         text-decoration: none;
         font-size: 16px;
         padding: 0px 0px;
+        font-size: 14px;
     }
 
 
     header nav ul li {
         margin: 10px 0;
         flex: 1;
+    }
+
+    .aProductos{
+        margin-left: -4px;
+        margin-right: 4px;
+    }
+
+    .products h2{
+        font-size: 30px;
     }
 
     .product {
