--- a/css/productos.css
+++ b/css/productos.css
@@ -180,6 +180,10 @@ footer {
         padding: 10px;
     }
 
+    header a{
+        font-size: 14px;
+    }
+
     header > h1 {
         font-size: 30px;
     }
@@ -203,11 +207,36 @@ footer {
         text-decoration: none;
         font-size: 16px;
         padding: 0px 0px;
+        font-size: 14px;
     }
 
 
     header nav ul li {
         margin: 10px 0;
         flex: 1;
+        font-size: 11px;
+    }
+
+    .aProductos{
+        margin-left: -4px;
+        margin-right: 4px;
+    }
+
+    .nuestrosProductos  h2{
+        font-size: 30px;
+    }
+
+    .product{
+        text-align: center;
+        padding-bottom: 3%;
+        margin-bottom: 8%;
+    }
+
+    .product .btn {
+        text-align: right !important;
+    }
+
+    .product img {
+        width: 70%;
     }
 }
