--- a/css/acerca_de.css
+++ b/css/acerca_de.css
@@ -10,18 +10,19 @@ header {
     padding: 20px;
     text-align: center;
     font-family: Arial, sans-serif;
+    padding-top: 20px;
 }
 
 header > h1 {
     color: #f44236;
-    font-size: 40px;
+    font-size: 50px;
     margin-bottom: 10px;
 }
 
 header a {
     text-decoration: none;
     color: inherit;
-    font-size: 18px;
+    font-size: 24px;
 }
 
 header nav {
@@ -78,7 +79,7 @@ header nav ul li {
 .secondary-nav ul li a {
     color: #fff;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 21px;
     padding: 10px 20px;
 }
 
@@ -91,7 +92,7 @@ header nav ul li {
 }
 
 .nuestrosProductos h2{
-    font-size: 45px;
+    font-size: 60px;
     color: #2c3e50; /* Cambia el color del texto */
     margin-bottom: 30px; /* Aumenta el espacio inferior */
     text-transform: uppercase;
